[gd_scene load_steps=13 format=3 uid="uid://xf324u56hg6d"]

[ext_resource type="Script" uid="uid://duamwnmnrd2tx" path="res://game_objects/boss/space_shooter_boss_level.gd" id="1_pd14p"]
[ext_resource type="PackedScene" uid="uid://2p8t5pmie1mf" path="res://game_world/camera.tscn" id="2_pd14p"]
[ext_resource type="Script" uid="uid://btp7tr7j06bg2" path="res://game_world/audio_stream_player_level.gd" id="7_bvy32"]
[ext_resource type="Curve2D" uid="uid://iv45dovav8m8" path="res://game_objects/boss/boss_curves/entrance_curve.tres" id="8_83yn4"]
[ext_resource type="PackedScene" uid="uid://c37xhnquv3t4n" path="res://game_objects/units/scenes/Boss.tscn" id="8_pd14p"]
[ext_resource type="Script" uid="uid://ba4mkqjn02qwt" path="res://game_objects/boss/path_2d_boss.gd" id="9_83yn4"]
[ext_resource type="PackedScene" uid="uid://dqks83s787sgm" path="res://game_objects/units/scenes/Player.tscn" id="9_p0l8b"]
[ext_resource type="AnimationLibrary" uid="uid://bcofpxtkjq2db" path="res://game_objects/units/player_transitions.res" id="9_veeyt"]
[ext_resource type="Script" uid="uid://54ksyhgfbxto" path="res://game_objects/boss/path_follow_2D_boss.gd" id="10_7e2rt"]

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_cnv2j"]

[sub_resource type="Animation" id="Animation_mwrb6"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:is_controlable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [500.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:direction")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hggu6"]
_data = {
&"RESET": SubResource("Animation_mwrb6")
}

[node name="SpaceShooter Boss Level" type="Node2D"]
modulate = Color(0, 0, 0, 1)
script = ExtResource("1_pd14p")

[node name="Camera2D" parent="." instance=ExtResource("2_pd14p")]

[node name="TimerLevel" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPolyphonic_cnv2j")
volume_db = -9.0
script = ExtResource("7_bvy32")

[node name="Path2D" type="Path2D" parent="."]
curve = ExtResource("8_83yn4")
script = ExtResource("9_83yn4")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-448, 128)
rotates = false
loop = false
script = ExtResource("10_7e2rt")

[node name="Boss" parent="Path2D/PathFollow2D" node_paths=PackedStringArray("path_2D", "path_follow_2D") instance=ExtResource("8_pd14p")]
path_2D = NodePath("../..")
path_follow_2D = NodePath("..")
speed_move_entrance = 600
speed_move_1 = 500
speed_move_2 = 750

[node name="BossShooter" parent="Path2D/PathFollow2D/Boss" index="4"]
first_angle_side = -45.0
second_angle_side = 45.0

[node name="Player" parent="." instance=ExtResource("9_p0l8b")]
position = Vector2(960, 1180)

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hggu6"),
&"player_transitions": ExtResource("9_veeyt")
}

[connection signal="tree_exited" from="Path2D/PathFollow2D/Boss" to="." method="_on_boss_tree_exited"]
[connection signal="projectile_shot" from="Path2D/PathFollow2D/Boss/BossShooter" to="." method="_on_boss_shooter_projectile_shot"]
[connection signal="projectile_shot" from="Player/Shooter" to="." method="_on_shooter_projectile_shot"]

[editable path="Path2D/PathFollow2D/Boss"]
[editable path="Path2D/PathFollow2D/Boss/BossShooter"]
[editable path="Player"]
[editable path="Player/Shooter"]
